Revert "fix sidebar text overflowing and not wrapping"
This reverts commit 279f1d9e26f620e0d881a4bb784d7e6b9cf183b4.

--- a/docs/extra/extra.css
+++ b/docs/extra/extra.css
@@ -96,7 +96,7 @@ nav.md-nav .md-nav__link {
 
 .md-nav__item {
   --md-accent-fg-color: currentColor;
-  max-width: 100%;
+  width: max-content;
 }
 
 .md-nav__item .md-nav__link--active {
